# krossbar-bus

./: .gitignore  Cargo.toml  LICENSE  README.md  README.tpl  install.sh
.github/workflows/: rust.yml
caro-bus-common/: Cargo.toml
caro-bus-common/src/: call_registry.rs  connect.rs  errors.rs  lib.rs  messages.rs  monitor.rs  net.rs  service_names.rs
caro-bus-common/tests/: service_names_tests.rs
caro-bus-connect/: Cargo.toml  Make.toml  com.bus.connect.service
caro-bus-connect/src/: main.rs
caro-bus-hub/: Cargo.toml  Make.toml
caro-bus-hub/src/: args.rs  client.rs  hub.rs  main.rs  permissions.rs
caro-bus-hub/systemd/: caro.bus.hub.service
caro-bus-hub/tests/: test_connections.rs  test_registration.rs
caro-bus-lib/: Cargo.toml
caro-bus-lib/examples/: call_method.rs  com.examples.register_method.service  performance_register_method.rs  performance_test.rs  register_macros.rs  register_method.rs  register_signal.rs  register_state.rs  service_example.rs  subscribe_on_signal.rs  watch_state.rs
caro-bus-lib/src/: bus.rs  bus_connection.rs  hub_connection.rs  lib.rs  method.rs  peer.rs  peer_connection.rs  peer_handle.rs  service.rs  service_connection.rs  signal.rs  state.rs  utils.rs
caro-bus-lib/tests/: test_methods.rs  test_signals.rs  test_states.rs
caro-bus-monitor/: Cargo.toml  Make.toml  com.bus.monitor.service
caro-bus-monitor/src/: main.rs
caro-macros/: Cargo.toml
caro-macros/src/: lib.rs  peer.rs  service.rs
caro-service/: Cargo.toml
caro-service/examples/: service_example.rs  service_macro_client.rs  service_macro_server.rs  service_macros.rs
caro-service/src/: lib.rs  method.rs  peer.rs  service.rs  signal.rs  state.rs  this.rs
caro-service/tests/: test_service_methods.rs  test_service_signals.rs  test_service_states.rs
client_lib/: Cargo.toml
client_lib/src/: bus_client.rs  bus_connection.rs  client.rs  connection.rs  lib.rs  method.rs  service_connection.rs  utils.rs
common/: Cargo.toml
common/src/: errors.rs  messages.rs
hub/: Cargo.toml
hub/src/: client.rs  hub.rs  main.rs  permissions.rs
karo-bus-common/: Cargo.toml
karo-bus-common/src/: call_registry.rs  connect.rs  errors.rs  lib.rs  monitor.rs  net.rs
karo-bus-connect/: Cargo.toml  Make.toml  install.sh  karo.bus.connect.service
karo-bus-connect/src/: main.rs
karo-bus-hub/: Cargo.toml  Make.toml  install.sh
karo-bus-hub/src/: args.rs  client.rs  hub.rs  main.rs  permissions.rs
karo-bus-hub/systemd/: caro.bus.hub.service  karo.bus.hub.service
karo-bus-hub/tests/: test_connections.rs  test_registration.rs
karo-bus-lib/: Cargo.toml
karo-bus-lib/examples/: call_method.rs  com.examples.call_method.service  com.examples.register_signal.service  performance_register_method.rs  performance_test.rs  register_method.rs  register_signal.rs  register_state.rs  subscribe_on_signal.rs  watch_state.rs
karo-bus-lib/src/: bus.rs  hub.rs  hub_connection.rs  hub_connector.rs  lib.rs  monitor.rs  peer.rs  peer_connection.rs  peer_connector.rs  simple_peer.rs  state.rs  utils.rs
karo-bus-lib/src/connections/: hub.rs  mod.rs  peer.rs  peer_connector.rs
karo-bus-lib/src/endpoints/: mod.rs  signal.rs
karo-bus-lib/src/peer/: mod.rs  peer.rs  peer_connector.rs
karo-bus-lib/tests/: test_methods.rs  test_signals.rs  test_states.rs
karo-bus-monitor/: Cargo.toml  Make.toml  install.sh  karo.bus.monitor.service
karo-bus-monitor/src/: main.rs
karo-bus-simple-client/: Cargo.toml
karo-bus-simple-client/src/: bus.rs  lib.rs  method.rs  net.rs
krossbar-bus-common/: Cargo.toml  Makefile.toml  README.md  README.tpl
krossbar-bus-common/src/: call_registry.rs  errors.rs  inspect_data.rs  lib.rs  message.rs  messages.rs  monitor.rs
krossbar-bus-common/src/protocols/: connect.rs  hub.rs  inspections.rs  mod.rs
krossbar-bus-common/tests/: service_names_tests.rs
krossbar-bus-connect/: Cargo.toml  install.sh
krossbar-bus-hub/: Cargo.toml  README.md  install.sh
krossbar-bus-hub/src/: args.rs  client.rs  hub.rs  lib.rs  main.rs  permissions.rs
krossbar-bus-hub/systemd/: karo.bus.hub.service
krossbar-bus-hub/tests/: fixture.rs  service_names_tests.rs  test_connections.rs  test_registration.rs
krossbar-bus-lib/: Cargo.toml  Makefile.toml  README.md  README.tpl
krossbar-bus-lib/examples/: call_method.rs  call_state.rs  com.examples.call_method.service  com.examples.call_state.service  com.examples.demo_client.service  com.examples.demo_server.service  com.examples.register_method.service  com.examples.register_signal.service  com.examples.register_state.service  com.examples.subscribe_on_signal.service  com.examples.watch_state.service  demo_client.rs  demo_server.rs  performance_register_method.rs  performance_test.rs  register_method.rs  register_signal.rs  register_state.rs  subscribe_on_signal.rs  watch_state.rs
krossbar-bus-lib/scripts/: install-examples.sh
krossbar-bus-lib/src/: bus.rs  client.rs  event.rs  lib.rs  monitor.rs  service.rs  signal.rs  utils.rs
krossbar-bus-lib/src/client/: mod.rs
krossbar-bus-lib/src/connections/: hub.rs  hub_connector.rs  peer.rs  peer_connector.rs
krossbar-bus-lib/src/endpoints/: mod.rs  signal.rs  state.rs
krossbar-bus-lib/src/service/: client.rs  service.rs
krossbar-bus-lib/tests/: fixture.rs  performance_test.rs  test_inspection.rs  test_methods.rs  test_signals.rs  test_states.rs
krossbar-bus-monitor/: Cargo.toml
krossbar-connect/: Cargo.toml  Makefile.toml  README.md  README.tpl  karo.bus.connect.service  krossbar.connect.service
krossbar-connect/src/: helper.rs  main.rs
krossbar-hub/: Cargo.toml  Makefile.toml  README.md  README.tpl
krossbar-hub/src/: args.rs  client.rs  hub.rs  main.rs  permissions.rs  service_names.rs
krossbar-hub/systemd/: krossbar-hub.service  krossbar.hub.service
krossbar-hub/tests/: test_connections.rs
krossbar-monitor/: Cargo.toml  Makefile.toml  README.md  install.sh  karo.bus.monitor.service  krossbar.monitor.service
krossbar-monitor/src/: main.rs
messages/: Cargo.toml
messages/src/: lib.rs
scripts/: gen_readme.sh  install.sh
(+1 files in other folders)
