[workspace]
resolver = "2"

members = [
    "krossbar-bus-common",
    "krossbar-bus-lib",
    "krossbar-connect",
    "krossbar-monitor",
    "krossbar-hub",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
authors = [
    "Alexander Smoktal <https://github.com/alexander-smoktal>",
    "Krossbar team",
]
license = "MIT"
repository = "https://github.com/krossbar-platform/krossbar-bus"
homepage = "https://krossbar.rs"

[workspace.dependencies]
bson = "2.10"
clap = "4.5"
colored = "2.1"
futures = "0.3"
json = "0.12.4"
log = "0.4"
pretty_env_logger = "0.4"
rstest = "0.19"
serde = "1.0"
tempdir = "0.3.7"
tokio = "1.37"
tokio-util = "0.7"

krossbar-bus-common = "0.5.0"
krossbar-bus-lib = "0.5.5"
krossbar-rpc = "0.5.5"
krossbar-state-machine = "0.5.3"
