[package]
name = "caro-bus-connect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
clap = { version = "3.2", features = ["derive", "color"] }
colored = "2.0.0"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.19", features = ["full"] }
rustyline = "10.0.0"

caro-bus-lib = { path = "../caro-bus-lib" }
caro-bus-common = { path = "../caro-bus-common" }
