[package]
name = "caro-bus-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.1"
# TODO: Limit fetures
tokio = { version = "1.19", features = ["full"] }
parking_lot = "0.12"
uuid = { version = "1.1", features = ["v4", "fast-rng"] }
log = "0.4"
pretty_env_logger = "0.4"
passfd = { git = "https://github.com/alexander-smoktal/passfd", version = "0.1.5", features = [
  "tokio",
] }

caro-bus-common = { path = "../caro-bus-common" }
