[package]
name = "caro-bus-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
async-recursion = "1.0.0"
bson = "2.3"
bytes = "1.1"
# TODO: Limit fetures
tokio = { version = "1.19", features = ["full"] }
parking_lot = "0.12"
log = "0.4"
tokio-send-fd = "0.9"
serde = "1.0"

caro-bus-common = { path = "../caro-bus-common" }

[dev-dependencies]
pretty_env_logger = "0.4"
