[package]
name = "caro-bus-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.3"
clap = { version = "3.2", features = ["derive", "color"] }
colored = "2.0.0"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.19", features = ["full"] }

caro-bus-lib = { path = "../caro-bus-lib" }
caro-bus-common = { path = "../caro-bus-common" }
