[package]
name = "caro-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
lazy_static = "1.4"
serde = "1.0"

caro-bus-lib = { path = "../caro-bus-lib" }
caro-bus-common = { path = "../caro-bus-common" }

[dev-dependencies]
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.19", features = ["full"] }
