[package]
name = "client_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.3"
bytes = "1.1"
# TODO: Limit fetures
tokio = { version = "1.19", features = ["full"] }
parking_lot = "0.12"
log = "0.4"
passfd = "0.1.4"
serde = "1.0"
async-trait = "0.1"

common = { path = "../common" }
