[package]
name = "karo-bus-lib"
version = "0.1.0"
edition = "2021"

[features]
simple-peer = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
async-recursion = "1.0"
bson = "2.3"
bytes = "1.1"
log = "0.4"
tokio = { version = "1.19", features = ["sync", "io-util", "net", "time"] }
tokio-send-fd = "0.9"
tokio-stream = "0.1"
serde = "1.0"

karo-bus-common = { path = "../karo-bus-common" }
karo-common-rpc = { git = "https://github.com/karo-platform/karo-common.git" }
karo-common-messages = { git = "https://github.com/karo-platform/karo-common.git" }
karo-common-connection = { git = "https://github.com/karo-platform/karo-common.git" }

[dev-dependencies]
pretty_env_logger = "0.4"
json = "0.12.4"
tempdir = "0.3.7"

karo-bus-hub = { path = "../karo-bus-hub" }
tokio = { version = "1.19", features = ["rt-multi-thread", "signal", "fs"] }
