[package]
name = "karo-bus-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
bson = "2.3"
clap = { version = "3.2", features = ["derive", "color"] }
colored = "2.0.0"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.19", features = ["macros"] }

karo-bus-lib = { path = "../karo-bus-lib" }
karo-bus-common = { path = "../karo-bus-common" }
