[package]
name = "karo-bus-simple-client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0"
async-trait = "0.1"
bson = "2.3"
bytes = "1.1"
serde = "1.0"
tokio = { version = "1.19", features = ["sync", "io-util", "net", "time"] }

karo-bus-common = { path = "../karo-bus-common" }
