[package]
name = "krossbar-bus-common"
version = "0.3.4"
edition = "2021"
rust-version = "1.75"
authors = ["Alexander Smoktal <https://github.com/alexander-smoktal>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/krossbar-platform/krossbar-bus"
homepage = "https://krossbar.rs"
description = """
Krossbar bus common library
"""
categories = ["network-programming"]
keywords = ["rpc", "messaging"]

[dependencies]
colored = "2.1"
serde = "1.0"

krossbar-common-rpc = "0.3.4"
