[package]
name = "krossbar-bus-common"
version = "0.5.0"
readme = "README.md"
description = """
Krossbar bus common library
"""
categories = ["network-programming"]
keywords = ["rpc", "messaging"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
colored = { workspace = true }
serde = { workspace = true, features = ["derive"] }
