[package]
name = "krossbar-bus-hub"
version = "0.1.0"
edition = "2021"

[lib]
name = "krossbar_hub_lib"
path = "src/lib.rs"
publish = false

[dependencies]
bson = "2.10"
clap = { version = "4.1", features = ["derive", "color"] }
futures = "0.3"
glob = "0.3"
json = "0.12"
log = "0.4"
pretty_env_logger = "0.4"
serde = "1.0"
tokio = { version = "1.37", features = ["net"] }

krossbar-bus-common = { path = "../krossbar-bus-common" }
krossbar-common-rpc = "0.3.2"

[dev-dependencies]
tempdir = "0.3"
tokio = { version = "1.37", features = ["full"] }
tokio-util = "0.7"

krossbar-bus-lib = { path = "../krossbar-bus-lib" }
