[package]
name = "krossbar-bus-lib"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
authors = ["Alexander Smoktal <https://github.com/alexander-smoktal>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/krossbar-platform/krossbar-bus"
homepage = "https://krossbar.rs"
description = """
Krossbar bus library
"""
categories = ["network-programming"]
keywords = ["rpc"]

[features]
default = ["inspection", "monitor"]
monitor = ["krossbar-common-rpc/monitor"]
inspection = []

[dependencies]
async-channel = "2.2"
bson = "2.10"
futures = "0.3"
log = { version = "0.4", features = ["release_max_level_info"] }
serde = "1.0"
tokio = { version = "1.37", features = ["net", "time", "signal"] }

krossbar-bus-common = { path = "../krossbar-bus-common" }
krossbar-common-rpc = "0.3.4"

[dev-dependencies]
pretty_env_logger = "0.4"
json = "0.12.4"
rstest = "0.19"
tempdir = "0.3.7"
tokio = { version = "1.37", features = ["full"] }
tokio-util = "0.7"

krossbar-bus-hub = { path = "../krossbar-bus-hub" }
