[package]
name = "krossbar-bus-lib"
version = "0.5.7"
readme = "README.md"
description = """
Krossbar bus library
"""
categories = ["network-programming"]
keywords = ["rpc", "messaging"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["inspection", "monitor"]
monitor = ["krossbar-rpc/monitor"]
inspection = []

[dependencies]
async-channel = "2.2"
bson = { workspace = true }
futures = { workspace = true }
log = { workspace = true, features = ["release_max_level_info"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["net", "time", "signal"] }

krossbar-bus-common = { workspace = true }
krossbar-rpc = { workspace = true }

[dev-dependencies]
pretty_env_logger = { workspace = true }
json = { workspace = true }
rstest = { workspace = true }
tempdir = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

krossbar-hub = { path = "../krossbar-hub" }
