[package]
name = "krossbar-connect"
version = "0.5.0"
edition = "2021"
rust-version = "1.75"
authors = ["Alexander Smoktal <https://github.com/alexander-smoktal>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/krossbar-platform/krossbar-bus"
homepage = "https://krossbar.rs"
description = """
Krossbar bus connect tool
"""
categories = ["network-programming"]
keywords = ["rpc", "messaging"]

[dependencies]
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "color"] }
colored = "2.1"
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
rustyline = "14.0.0"

krossbar-bus-lib = "0.5.2"
krossbar-bus-common = "0.5.0"
