[package]
name = "krossbar-connect"
version = "0.5.3"
readme = "README.md"
description = """
Krossbar bus connect tool
"""
categories = ["network-programming"]
keywords = ["rpc", "messaging"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde_json = "1.0"
clap = { workspace = true, features = ["derive", "color"] }
colored = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }
rustyline = { version = "14.0.0", features = ["derive"] }

krossbar-bus-lib = { workspace = true }
krossbar-bus-common = { workspace = true }
