[package]
name = "krossbar-hub"
version = "0.5.1"
edition = "2021"
rust-version = "1.75"
authors = ["Alexander Smoktal <https://github.com/alexander-smoktal>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/krossbar-platform/krossbar-bus"
homepage = "https://krossbar.rs"
description = """
Krossbar bus hub
"""
categories = ["network-programming"]
keywords = ["rpc", "messaging"]

[features]
default = ["privileged-services"]
# add krossbar-bus and krossbar-connect support
privileged-services = []

[lib]
name = "krossbar_hub_lib"
path = "src/lib.rs"

[dependencies]
bson = "2.10"
clap = { version = "4.5", features = ["derive", "color"] }
futures = "0.3"
glob = "0.3"
json = "0.12"
log = "0.4"
pretty_env_logger = "0.4"
serde = "1.0"
tokio = { version = "1.37", features = ["net", "signal", "rt", "macros"] }
thiserror = "1.0"

krossbar-bus-common = "0.5.0"
krossbar-common-rpc = "0.5.1"

[dev-dependencies]
rstest = "0.19"
tempdir = "0.3"
tokio = { version = "1.37", features = ["full"] }
tokio-util = "0.7"

krossbar-bus-lib = "0.5.2"
