[package]
name = "krossbar-hub"
version = "0.5.5"
readme = "README.md"
description = """
Krossbar bus hub
"""
categories = ["network-programming"]
keywords = ["rpc", "messaging"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["privileged-services"]
# add krossbar-bus and krossbar-connect support
privileged-services = []

[lib]
name = "krossbar_hub_lib"
path = "src/lib.rs"

[dependencies]
bson = { workspace = true }
clap = { workspace = true, features = ["derive", "color"] }
futures = { workspace = true }
glob = "0.3"
json = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = [
    "net",
    "signal",
    "rt",
    "macros",
    "time",
] }
thiserror = "1.0"

krossbar-bus-common = { workspace = true }
krossbar-rpc = { workspace = true }
krossbar-state-machine = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempdir = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

krossbar-bus-lib = "0.5.5"
