[package]
name = "krossbar-monitor"
version = "0.4.0"
edition = "2021"

[dependencies]
bson = "2.10"
clap = { version = "4.5", features = ["derive", "color"] }
colored = "2.1"
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.37", features = ["macros", "rt"] }

krossbar-bus-lib = "0.4.3"
krossbar-common-rpc = "*"
krossbar-bus-common = "*"
