[package]
name = "krossbar-monitor"
version = "0.5.3"
readme = "README.md"
description = """
Krossbar bus monitor
"""
categories = ["network-programming"]
keywords = ["rpc", "messaging"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bson = { workspace = true }
clap = { workspace = true, features = ["derive", "color"] }
colored = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

krossbar-rpc = { workspace = true, features = ["impl-monitor"] }
krossbar-bus-lib = { workspace = true }
krossbar-bus-common = { workspace = true }
